@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1258 2003/07/16 17:07:35 druzus Exp $
+ * $Id: ChangeLog,v 1.1259 2003/07/17 01:52:48 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-07-17 10:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+   * source/rdd/dbcmd.c
+     * Modified error handling to allow retry if alias is not exist during
+       DBSelectArea() for Clipper compatibility. (Reported by Giovi Verrua)
+
 2003-07-17 08:45 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
    * source/vm/hvm.c
      * More Clipper compatible to handle FOR-NEXT loops.
